--- a/src/FluentNHibernate/FluentNHibernate.csproj
+++ b/src/FluentNHibernate/FluentNHibernate.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="NHibernate" Version="5.0.0-ci-00140-dbg-NH-3807" />
+    <PackageReference Include="NHibernate.Driver.SqlServer" Version="5.0.0-ci-00140-dbg-NH-3807" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
   </ItemGroup>
 
